# libfinal2022

000_Pruebas/src/: face.rs  sketch.rs
010_1_Maze_Generator_with_p5/src/: cell.rs
capitulos/000_Pruebas/: Cargo.toml
capitulos/000_sudoku_Pau_fernandez/: Cargo.toml
capitulos/000_sudoku_creacion/: Cargo.toml
capitulos/000a_Pruebas/: Cargo.toml
capitulos/000b_Pruebas/: Cargo.toml
capitulos/000c_Pruebas/: Cargo.toml
capitulos/000d_Pruebas/: Cargo.toml  rustfmt.toml
capitulos/001_Starfield/: Cargo.toml
capitulos/001_Starfield/src/: main.rs  sketch.rs  star.rs
capitulos/002_Menger_Sponge_Fractal/: Cargo.toml
capitulos/007_Solar_System_in_Processing/: Cargo.toml
capitulos/010_1_Maze_Generator_with_p5/: Cargo.toml
capitulos/010_2_Maze_Generator_with_p5/: Cargo.toml
capitulos/010_3_Maze_Generator_with_p5/: Cargo.toml
capitulos/010_4_Maze_Generator_with_p5/: Cargo.toml
capitulos/013_Reaction_Diffusion_Algorithm_in_p5/: Cargo.toml
capitulos/014_Fractal_Trees_Recursive/: Cargo.toml
capitulos/028_Metaballs/: Cargo.toml
capitulos/030_Phyllotaxis/: Cargo.toml
capitulos/032_1_Agar_io_Part_1/: Cargo.toml
libfinal/: Cargo.toml
libfinal/src/: ambient.rs  conf.toml  constantes.rs  dom.rs  engine.rs  environment.rs  events.rs  image.rs  imgui_wrapper.rs_  lib.rs  lights_camera.rs  matem.rs  parametros.rs  rendering.rs  shapes.rs  structure.rs  transform.rs  transform3d.rs  typography.rs  utiles.rs
libfinal/src/p5/: color_p5.rs  image.rs_  image_p5.rs  mod.rs  sound.rs  vector.rs_  vector3d_p5.rs  vector_p5.rs
src/: main.rs  sketch.rs
(+199 files in other folders)
