[package]
name = "main001"
version = "0.1.0"
authors = ["wartyz <zwenderk@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
raylib = { version = "3.7", git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
libfinal = { path = "../../libfinal/" }